@@ -11,6 +11,7 @@ use File::Copy;
 use File::Spec;
 
 __PACKAGE__->sql_maker_class('DBIx::Class::SQLAHacks::SQLite');
+__PACKAGE__->sql_limit_dialect ('LimitOffset');
 
 sub backup
 {
